--- a/Doutor Estranho/index.html
+++ b/Doutor Estranho/index.html
@@ -8,12 +8,8 @@
     </head>
     <body>
         <div class="começo">
-            <div class="começo1">
-                <h1>Doutor Estranho 2</h1>
-            </div>
-            <div class="começo2">
-                <h1>no Multiverso da Loucura</h1>
-            </div>
+                <h1 class="titulo">Doutor Estranho 2</h1>
+                <h1 class="subtitulo">No Multiverso da Loucura</h1>
         </div>
         <div class="elenco">
             <h2>Informações sobre o filme:</h2>
@@ -29,11 +25,11 @@
                 <img src="imagens/elenco2.jpg" alt="elenco 2">
                 <img src="imagens/elenco3.jpg" alt="elenco 3">
         </div>
-        <div class="fundo2"></div>
+        <div class="imagem2"></div>
         <div class="sinopse">
             <h2>Sinopse:</h2>
             <p style="font-size: 20px;">Em Doutor Estranho no Multiverso da Loucura, após derrotar Dormammu e enfrentar Thanos nos eventos de Vingadores: Ultimato, o Mago Supremo, Stephen Strange (Benedict Cumberbatch), e seu parceiro Wong (Benedict Wong), continuam suas pesquisas sobre a Joia do Tempo. Mas um velho amigo que virou inimigo coloca um ponto final nos seus planos e faz com que Strange desencadeie um mal indescritível, o obrigando a enfrentar uma nova e poderosa ameaça. O longa se conecta com a série do Disney+ WandaVision e tem relação também com Loki. O longa pertence a fase 4 do MCU onde a realidade do universo pode entrar em colapso por causa do mesmo feitiço que trouxe os vilões do Teioso para o mundo dos Vingadores e o Mago Supremo precisará contar com a ajuda de Wanda (Elizabeth Olsen), que vive isolada desde os eventos de WandaVision.</p>
-            <div class="botaovermelho">
+            <div class="quadrado">
                 <h3>Em breve nos cinemas</h3>
             </div>
         </div>
