--- a/Superman/Superman.html
+++ b/Superman/Superman.html
@@ -32,7 +32,7 @@
             <img src="imagem/5.jpg" alt="Imagem 5">
             <img src="imagem/6.jpg" alt="Imagem 6">
         </div>
-        <p>Assista Superman & Lois na <a href="https://www.max.com/br/pt" target="_blank">HBO Max</a></p>
+        <p>Assista Superman & Lois na <a href="https://www.max.com/br/pt">HBO Max</a></p>
     </section>
     <section id="quadbaixo">
         <p>HBO Max - 2022</p>
