--- a/Superman/Superman.html
+++ b/Superman/Superman.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,33 +8,37 @@
 </head>
 <body>
     <section id="topo">
-        <P> <span>Superman & Lois</span> <a class="botaoSinopse" href="#sinopse">Sinopse</a> <a class="botaoDisponibilidade" href="#disponibilidade">Disponibilidade</a></P>
+        <p>Superman & Lois</p>
+        <ul>
+            <li><a href="#sinopse">Sinopse</a></li>
+            <li><a href="#dispo">Disponibilidade</a></li>
+        </ul>
     </section>
     <section id="superman">
-        <img src="imagem/capa.jpg" alt="Superman e Louis">
+        <img src="imagens/capa.jpg" alt="capa superman">
     </section>
     <section id="sinopse">
         <h1>Sinopse</h1>
         <p>Após anos enfrentando supervilões megalomaníacos, monstros destruidores e invasores alienígenas, o Homem de Aço e a famosa jornalista Lois Lane retornam à idílica cidade de Smallville para criar os filhos adolescentes, Jonathan e Jordan.
         <br>Na estreia da série, Superman e Lois retornam a Smallville para enfrentar um de seus maiores desafios: criar dois meninos sendo pais que trabalham.</p>
     </section>
-    <section id="disponibilidade">
+    <section id="dispo">
         <h1>Disponibilidade</h1>
-        <img src="imagem/tv.jpg" alt="Imagem Tv">
-        <p>Superman & Lois já conta com duas temporadas e está sendo transmitido pelo canal de TV Warner Channel e no serviço de Streaming HBO Max. </p>
-        <p>Os novos episódios da série saem aos sábados.</p>
-        <p>Confira abaixo algumas imagens da série:</p>
+        <img src="imagens/tv.jpg" alt="hbo">
+        <p>Superman & Lois já conta com duas temporadas e está sendo transmitido pelo canal de TV Warner Channel e no serviço de Streaming HBO Max.
+        <br>Os novos episódios da série saem aos sábados.
+        <br>Confira abaixo algumas imagens da série:</p>
         <div class="imagens">
-            <img src="imagem/1.jpg" alt="Imagem 1">
-            <img src="imagem/2.jpg" alt="Imagem 2">
-            <img src="imagem/3.jpg" alt="Imagem 3">
-            <img src="imagem/4.jpg" alt="Imagem 4">
-            <img src="imagem/5.jpg" alt="Imagem 5">
-            <img src="imagem/6.jpg" alt="Imagem 6">
+            <img src="imagens/1.jpg" alt="1">
+            <img src="imagens/2.jpg" alt="2">
+            <img src="imagens/3.jpg" alt="3">
+            <img src="imagens/4.jpg" alt="4">
+            <img src="imagens/5.jpg" alt="5">
+            <img src="imagens/6.jpg" alt="6">
         </div>
         <p>Assista Superman & Lois na <a href="https://www.max.com/br/pt">HBO Max</a></p>
     </section>
-    <section id="quadbaixo">
+    <section id="final">
         <p>HBO Max - 2022</p>
     </section>
 </body>
